<resources>
    <string name="app_name">LawnDemandProvider</string>
    <string name="menu_button">Menu Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="_0">0</string>
    <string name="get_work">Get Work</string>
    <string name="settings">Settings</string>
    <string name="nearest_job">Nearest Job</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="go_online">Go Online</string>
    <string name="go_offline">Go Offline</string>
    <string name="next_job">Next Job</string>
    <string name="price">%1$s</string>
    <string name="channel_name">Pending Lawn</string>
    <string name="channel_description">This channel is for pending lawns</string>
</resources>