<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/new_job_dialog_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/nearest_job"
        android:gravity="center"
        android:textColor="?attr/colorOnPrimary"
        android:background="?attr/colorPrimary" />

    <TextView
        android:id="@+id/new_job_dialog_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@id/new_job_dialog_title"/>

    <TextView
        android:id="@+id/new_job_dialog_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_below="@id/new_job_dialog_pay"/>

    <Button
        android:id="@+id/new_job_dialog_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/et_background"
        android:text="@string/accept"
        android:layout_margin="@dimen/padding"
        android:layout_below="@id/new_job_dialog_distance"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/new_job_dialog_decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/et_background"
        android:text="@string/decline"
        android:layout_margin="@dimen/padding"
        android:layout_below="@id/new_job_dialog_distance"
        android:layout_alignParentStart="true"/>

</RelativeLayout>